Update title in index.html to reflect change in occupation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Jyotismita Das">Jyotismita Das</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Psychology student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
